fix login image

--- a/resources/css/custom-login.css
+++ b/resources/css/custom-login.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/public/images/13.jpeg");
+    background-image: url("/public/images/12.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
